--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@
         "flext-core @ file:../flext-core",
         "ldap3 (>=2.9.1)",
         "ldif3 (>=3.2.2)",
-        "pydantic (>=2.11.7)",
+        "pydantic[email] (>=2.12.3,<3.0.0)",
         "pydantic-settings (>=2.10.1)",
         "structlog (>=25.4.0)",
     ]
@@ -179,3 +179,11 @@
             known-first-party = [
                 "flext_ldif",
             ]
+
+    [tool.pyrefly]
+        # SubConfig: Disable unknown-name error for models.py
+        # This handles forward references to classes defined later in the same file
+        [[tool.pyrefly.sub-config]]
+            matches = "**/models.py"
+            [tool.pyrefly.sub-config.errors]
+                unknown-name = false
