--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@
         "flext-core @ file:../flext-core",
         "ldap3 (>=2.9.1)",
         "ldif3 (>=3.2.2)",
-        "pydantic[email] (>=2.12.3,<3.0.0)",
-        "pydantic-settings (>=2.10.1)",
+        "pydantic (>=2.12.3)",
+        "pydantic-settings (>=2.11.0)",
         "structlog (>=25.4.0)",
+        "pydantic-core (>=2.41.4)",
     ]
     description = "FLEXT LDIF - Enterprise LDIF Processing Library"
     keywords = [
@@ -100,18 +101,19 @@
             vulture = ">=2.13"
 
         [tool.poetry.group.test.dependencies]
-            docker = ">=7.1.0"
+            
+        
+docker = ">=7.1.0"
             factory-boy = ">=3.3.1"
             faker = ">=37.4.0"
             hypothesis = ">=6.125.0"
             pytest = ">=8.4.0"
             pytest-benchmark = ">=5.1.0"
             pytest-clarity = ">=1.0.1"
-            pytest-cov = ">=6.2.0"
+            pytest-cov = "=7.0.0"
             pytest-deadfixtures = ">=2.2.1"
             pytest-env = ">=1.1.5"
             pytest-mock = ">=3.14.0"
-            pytest-randomly = ">=3.16.0"
             pytest-sugar = ">=1.0.0"
             pytest-timeout = ">=2.4.0"
             pytest-xdist = ">=3.8.0"
