--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,10 +79,16 @@
                 develop = true
                 path = "../flext-observability"
 
+        [tool.poetry.dependencies.flext-quality]
+            develop = true
+            optional = true
+            path = "../flext-quality"
+
         [tool.poetry.group.dev.dependencies]
             attrs = "^25.3.0"
             autoflake = ">=2.3.1"
             backoff = "^2.2.1"
+            beartype = ">=0.18.0"
             black = ">=25.1.0"
             codespell = ">=2.3.0"
             commitizen = ">=4.8.3"
