--- a/pyproject.toml
+++ b/pyproject.toml
@@ -163,6 +163,7 @@ docker = ">=7.1.0"
             "e2e: End-to-end tests",
             "fixtures: Tests using real LDIF fixtures",
             "integration: Integration tests",
+            "ldif: LDIF-specific tests",
             "memory: Memory tests",
             "memory_limit: Memory limit tests",
             "operational: Operational tests with real data",
@@ -170,6 +171,7 @@ docker = ">=7.1.0"
             "quirks: LDAP server quirks tests",
             "race_condition: Race condition tests",
             "real_data: Tests using real fixture data",
+            "real_ldap: Tests requiring real LDAP container",
             "regression: Regression tests",
             "roundtrip: Bidirectional conversion tests",
             "slow: Slow tests",
