--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # FLEXT-LDIF Configuration Example
 # ============================================================================
 # Copy this file to .env and customize values for your environment.
-# All settings are automatically loaded by FlextLdifConfig (Pydantic Settings)
+# All settings are automatically loaded by FlextLdifSettings (Pydantic Settings)
 #
 # Usage:
 #   cp .env.example .env
