--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@
     ]
     dependencies = [
         "colorlog (>=6.9.0)",
-        "flext-core @ file:../flext-core",
         "ldap3 (>=2.9.1)",
         "pydantic (>=2.12.3)",
         "pydantic-settings (>=2.11.0)",
@@ -97,7 +96,7 @@
             isort = ">=6.0.1"
             pre-commit = ">=4.0.1"
             pylint = ">=3.3.0"
-            pyrefly = "^0.34.0"
+            pyrefly = "^0.46.3"
             pyupgrade = ">=3.19.0"
             radon = ">=6.0.1"
             ruff = ">=0.12.3"
@@ -105,6 +104,13 @@
             types-docker = "^7.1.0.20250916"
             vulture = ">=2.13"
         coverage = "^7.12.0"
+        pytest = "^9.0.2"
+        pytest-cov = "^7.0.0"
+        faker = "^40.1.0"
+        opentelemetry-api = ">=1.39.1"
+        opentelemetry-sdk = ">=1.39.1"
+        prompt-toolkit = ">=3.0.52"
+        sqlparse = ">=0.5.5"
 
         [tool.poetry.group.test.dependencies]
             
@@ -116,7 +122,7 @@ docker = ">=7.1.0"
             pytest = ">=8.4.0"
             pytest-benchmark = ">=5.1.0"
             pytest-clarity = ">=1.0.1"
-            pytest-cov = "=7.0.0"
+            pytest-cov = ">=7.0.0"
             pytest-deadfixtures = ">=2.2.1"
             pytest-env = ">=1.1.5"
             pytest-mock = ">=3.14.0"
