fix(ldif): add pyrefly search-path, OID entry parse hook for metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -275,6 +275,8 @@ docker = ">=7.1.0"
 
     [tool.pyrefly]
         search-path = [
+            "../typings",
+            "../typings/generated",
             ".",
             "src",
             "tests",
