--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,7 +160,17 @@ per_rule_ignores.DEP002 = [
 
 [tool.pytest]
 ini_options.pythonpath = [ "src" ]
-ini_options.addopts = [ "--strict-config", "--strict-markers", "--tb=short", "-p no:sugar", "-q", "-ra" ]
+ini_options.addopts = [
+  "--strict-config",
+  "--strict-markers",
+  "--tb=short",
+  "-p no:sugar",
+  "-q",
+  "-ra",
+  "--timeout=30",
+  "--timeout-method=signal",
+  "--durations=0",
+]
 ini_options.filterwarnings = [
   "ignore::DeprecationWarning:pyasn1(.*|$)",
 ]
