chore: fix duplicate poetry-core requires + sync scripts from make upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -324,3 +324,7 @@ staging/
 __pycache__/
 *.egg-info
 .github/*.rej
+
+# --- workspace-sync: required ignores (auto-managed) ---
+.reports/
+.venv/
